apps/base/proxer/proxer.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxer-system
  labels:
    networking.tinyrack.net/isolation: enabled
