apps/base/proxer/proxer.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxer
  namespace: proxer-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxer
  template:
    metadata:
      labels:
        app: proxer
        observability.tinyrack.net/otlp-client: "true"
    spec:
      containers:
        - name: proxer
          image: ghcr.io/tinyrack-net/proxer:latest@sha256:27a8dd9112fddf5694a41c7780fe5503f81e557f6d6d36c2f64436711f21bf49 # {"$imagepolicy": "flux-system:proxer"}
          imagePullPolicy: Always
          command:
            - proxer
          args:
            - server
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /__proxer__/health/live
              port: http
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /__proxer__/health/ready
              port: http
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
