apps/base/proxer/proxer.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxer-service
  namespace: proxer-system
spec:
  type: ClusterIP
  selector:
    app: proxer
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
