apps/base/proxer/proxer.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxer-ingress-route
  namespace: proxer-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxy.intranet.winetree94.com`)
      kind: Rule
      services:
        - name: proxer-service
          kind: Service
          port: 8080
          passHostHeader: true
          scheme: http
    - match: 'HostRegexp(`[a-z0-9-]+\.proxy\.intranet\.winetree94\.com`)'
      kind: Rule
      services:
        - name: proxer-service
          kind: Service
          port: 8080
          passHostHeader: true
          scheme: http
  tls:
    secretName: letsencrypt-cert
